Add responsive related-news section

--- a/index.html
+++ b/index.html
@@ -654,6 +654,161 @@
 
 </main>
 
+
+
+<section class="related-news container">
+
+  <ul class="related-news__list">
+
+    <li class="related-news__item">
+      <article class="related-card">
+        <picture>
+          <source srcset="images/RyanandBlake1.avif" type="image/avif">
+          <source srcset="images/RyanandBlake1.webp" type="image/webp">
+          <img class="related-card__image" src="./images/RyanandBlake1.png" srcset="./images/RyanandBlake2.png 2x" alt="Ryan Reynolds and Blake Lively's Philanthropy" >
+        </picture>
+
+        <h2 class="related-card__title">
+          <a class="related-card__link" href="/">Ryan Reynolds and Blake Lively's Philanthropy</a>
+        </h2>
+
+        <p class="related-card__description">
+          Updates on the philanthropic activities of Ryan Reynolds.
+        </p>
+      </article>
+    </li>
+
+    <li class="related-news__item">
+      <article class="related-card">
+        <picture>
+          <source srcset="images/Andrew1.avif" type="image/avif">
+          <source srcset="images/Andrew1.webp" type="image/webp">
+          <img class="related-card__image" src="./images/Andrew1.png" srcset="./images/Andrew2.png 2x" alt="Prince Andrew's Legal Issues" >
+        </picture>
+
+        <h2 class="related-card__title">
+          <a class="related-card__link" href="/">Prince Andrew's Legal Issues</a>
+        </h2>
+
+        <p class="related-card__description">
+          Ongoing coverage of legal matters involving Prince Andrew.
+        </p>
+      </article>
+    </li>
+
+    <li class="related-news__item">
+      <article class="related-card">
+        <picture>
+          <source srcset="images/Reese1.avif" type="image/avif">
+          <source srcset="images/Reese1.webp" type="image/webp">
+          <img class="related-card__image" src="./images/Reese1.png" srcset="./images/Reese2.png 2x" alt="Reese Witherspoon's Production Ventures" >
+        </picture>
+
+        <h2 class="related-card__title">
+          <a class="related-card__link" href="/">Reese Witherspoon's Production Ventures</a>
+        </h2>
+
+        <p class="related-card__description">
+          News on Leonardo DiCaprio's ongoing environmental.
+        </p>
+      </article>
+    </li>
+
+    <li class="related-news__item">
+      <article class="related-card">
+        <picture>
+          <source srcset="images/Health1.avif" type="image/avif">
+          <source srcset="images/Health1.webp" type="image/webp">
+          <img class="related-card__image" src="./images/Health1.png" srcset="./images/Health2.png 2x" alt="Queen Elizabeth II's Health Updates" >
+        </picture>
+
+        <h2 class="related-card__title">
+          <a class="related-card__link" href="/">Queen Elizabeth II's Health Updates</a>
+        </h2>
+
+        <p class="related-card__description">
+          Periodic updates on the health of Queen Elizabeth II.
+        </p>
+      </article>
+    </li>
+
+
+    <li class="related-news__item">
+      <article class="related-card">
+        <picture>
+          <source srcset="images/Memoir1.avif" type="image/avif">
+          <source srcset="images/Memoir1.webp" type="image/webp">
+          <img class="related-card__image" src="./images/Memoir1.png" srcset="./images/Memoir2.png 2x" alt="Prince Harry's Memoir" >
+        </picture>
+
+        <h2 class="related-card__title">
+          <a class="related-card__link" href="/">Prince Harry's Memoir Announcement</a>
+        </h2>
+
+        <p class="related-card__description">
+          Reports on Prince Harry's announcement of a forthcoming.
+        </p>
+      </article>
+    </li>
+
+    <li class="related-news__item">
+      <article class="related-card">
+        <picture>
+          <source srcset="images/Leonardo1.avif" type="image/avif">
+          <source srcset="images/Leonardo1.webp" type="image/webp">
+          <img class="related-card__image" src="./images/Leonardo1.png" srcset="./images/Leonardo2.png 2x" alt="Leonardo DiCaprio's Environmental Advocacy" >
+        </picture>
+
+        <h2 class="related-card__title">
+          <a class="related-card__link" href="/">Leonardo DiCaprio's Environmental Advocacy</a>
+        </h2>
+
+        <p class="related-card__description">
+          News on Leonardo DiCaprio's ongoing environmental advocacy.
+        </p>
+      </article>
+    </li>
+
+    <li class="related-news__item">
+      <article class="related-card">
+        <picture>
+          <source srcset="images/Pregnancy1.avif" type="image/avif">
+          <source srcset="images/Pregnancy1.webp" type="image/webp">
+          <img class="related-card__image" src="./images/Pregnancy1.png" srcset="./images/Pregnancy2.png 2x" alt="Princess Eugenie's Pregnancy" >
+        </picture>
+
+        <h2 class="related-card__title">
+          <a class="related-card__link" href="/">Princess Eugenie's Pregnancy Announcement</a>
+        </h2>
+
+        <p class="related-card__description">
+          News about Princess Eugenie, daughter of Prince Andrew.
+        </p>
+      </article>
+    </li>
+
+    <li class="related-news__item">
+      <article class="related-card">
+        <picture>
+          <source srcset="images/Emma1.avif" type="image/avif">
+          <source srcset="images/Emma1.webp" type="image/webp">
+          <img class="related-card__image" src="./images/Emma1.png" srcset="./images/Emma2.png 2x" alt="Emma Stone's Role in 'Cruella'" >
+        </picture>
+
+        <h2 class="related-card__title">
+          <a class="related-card__link" href="/">Emma Stone's Role in "Cruella"</a>
+        </h2>
+
+        <p class="related-card__description">
+          Coverage of Emma Stone's role as the iconic Disney villain.
+        </p>
+      </article>
+    </li>
+
+  </ul>
+
+</section>
+
 <script src="script.js"></script>
 </body>
 </html>
