Add responsive footer

--- a/index.html
+++ b/index.html
@@ -809,6 +809,41 @@
 
 </section>
 
+
+<footer class="footer">
+  <div class=" footer__container container">
+
+    <a href="/" class="footer__logo" >Logo</a>
+
+    <nav class="footer__nav">
+      <ul class="footer__list">
+
+        <li class="footer__item">
+          <a href="/" class="footer__link">Contact</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="/" class="footer__link">Tip Us</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="/" class="footer__link">Community Guidelines</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="/" class="footer__link">About</a>
+        </li>
+
+        <li class="footer__item">
+          <a href="/" class="footer__link">Ethics Statement</a>
+        </li>
+
+      </ul>
+    </nav>
+
+  </div>
+</footer>
+
 <script src="script.js"></script>
 </body>
 </html>
